# nanobot

./: .gitignore  .replit  AGENTS.md  CACHE_FLOW_DIAGRAM.md  CACHE_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.fly  HEALTH_CHECK_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_SYNTHESIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEDIA_API_PRICING.md  MUSIC_API_FLOW.md  MUSIC_API_IMPLEMENTATION.md  MUSIC_IMPLEMENTATION_PLAN.md  PERFORMANCE_OPTIMIZATION.md  README.md  README_CACHE_SYSTEM.md  README_HEALTH_CHECK.md  SECURITY.md  SECURITY_ADDITIONAL_FINDINGS.md  SECURITY_AUDIT.md  SOUL.md  TEST_RESULTS.md  USAGE_EXAMPLES.md  USER.md  action.yml  docker-compose.yml  fly.toml  replit.nix  update.md
.cargo/: config.toml
.claude/rules/: infra-deploy.md  rust-backend.md  web-frontend.md
.github/: dependabot.yml
.github/workflows/: build-lambda.yml  ci.yml  deploy.yml  release.yml
crates/chatweb-app/: Cargo.toml
crates/chatweb-app/src/: lib.rs
crates/chatweb-app/src/api/: auth.rs  chat.rs  mod.rs
crates/chatweb-app/src/components/: mod.rs
crates/chatweb-app/src/components/chat/: chat_bubble.rs  chat_input.rs  chat_view.rs  mod.rs
crates/chatweb-app/src/components/layout/: header.rs  mod.rs  sidebar.rs
crates/chatweb-app/src/components/ui/: mod.rs
crates/chatweb-app/src/components/voice/: mod.rs
crates/chatweb-app/src/context/: auth.rs  brand.rs  mod.rs  theme.rs
crates/chatweb-app/src/pages/: home.rs
crates/chatweb-app/src/types/: chat.rs  user.rs
crates/chatweb-frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
crates/chatweb-frontend/src/: lib.rs
crates/nanobot-core/: Cargo.toml  build.rs
crates/nanobot-core/src/: bus.rs  error.rs  lib.rs  skills.rs  types.rs
crates/nanobot-core/src/agent/: context.rs  mod.rs  ooda.rs  personality.rs  subagent.rs
crates/nanobot-core/src/cache/: media_cache.rs  mod.rs
crates/nanobot-core/src/channel/: discord.rs  facebook.rs  feishu.rs  google_chat.rs  imessage.rs  line.rs  matrix.rs  mod.rs  signal.rs  slack.rs  teams.rs  telegram.rs  whatsapp.rs  zalo.rs
crates/nanobot-core/src/config/: dynamo_provider.rs  mod.rs  provider.rs
crates/nanobot-core/src/db/: backend.rs  libsql.rs  mod.rs  schema.sql
crates/nanobot-core/src/mcp/: client.rs
crates/nanobot-core/src/memory/: backend.rs  dynamo_backend.rs  file_backend.rs  mod.rs
crates/nanobot-core/src/provider/: anthropic.rs  embeddings.rs  gemini.rs  local.rs  mod.rs  openai_compat.rs  pricing.rs
crates/nanobot-core/src/service/: a2a.rs  auth.rs  commands.rs  cron.rs  gateway.rs  heartbeat.rs  http.rs  http.rs.bak  http.rs.bak2  http.rs.bak3  http.rs.bak4  integrations.rs  mod.rs  saas_tools.rs  solana.rs  stripe.rs  tags.rs  tool_permissions.rs  usage.rs  vault.rs
crates/nanobot-core/src/session/: dynamo_store.rs  file_store.rs  mod.rs  store.rs
crates/nanobot-core/src/tool/: cron_tool.rs  filesystem.rs  message.rs  mod.rs  shell.rs  spawn.rs  web.rs
crates/nanobot-core/src/util/: http.rs  markdown.rs  mod.rs
crates/nanobot-core/tests/: personality.rs  self_improvement.rs
crates/nanobot-fly/: Cargo.toml
crates/nanobot-fly/src/: main.rs
crates/nanobot-lambda/: Cargo.toml
crates/nanobot-lambda/src/: main.rs
docs/: BRANDING_UPDATE.md  CHANNELS.md  ELIOCHAT_API.md  FILLER_PHRASES.md  HTTP_RS_ANALYSIS.md  IMPROVEMENTS_SUMMARY.md  MOBILE_CLI.md  REALTIME_API_EVALUATION.md  SKILLS.md  SYSTEM.md  TAILSCALE_SETUP.md  VERIFICATION_REPORT.md  behavioral-evolution.md  blog-enablerdao-jiuflow-soluna-2026-02-24.md  deployment.md  enai-token.md  environment-variables.md  graviton3-optimization.md  press-release.md  self-improvement-test-scenarios.md  self-improvement.md  tool-permissions.md  vector-memory-proposal.md
infra/: DEPLOY_GUIDE.md  auto-subdomain-deploy.sh  deploy-dev.sh  deploy-fast.sh  deploy-prod.sh  deploy.sh  set-voice-id.sh  setup-webhook.sh  template.yaml
infra/.aws-sam/: build.toml
infra/modal/: browser_service.py  cosyvoice_tts.py  j_moshi.py  kokoro_tts.py  modal_tts.py  qwen_tts.py  voice_analysis.py
infra/rpi/: .env.rpi.example  boot-sound.sh  build-rpi.sh  chatweb.service  deploy-rpi.sh  install-service.sh  setup-sd.sh
infra/runpod-qwen-tts/: .dockerignore  Dockerfile  README.md  deploy-runpod.sh  requirements.txt  server.py  test-local.sh
infra/rust-compiler-lambda/: Dockerfile  GITHUB_PIPELINE.md  README.md  bootstrap.sh  compile-and-deploy.sh  deploy-full-pipeline.sh  deploy.sh  full-pipeline-lambda.py  github-edit-deploy.sh
launch/: articles-draft.md  banto-totono-note.md  blog-board-meeting-2026-02.md  hackernews-show-hn.md  kouzou-qiita.md  producthunt-drafts.md  status-dashboard.html
marketing/: twitter-posts.md
marketing/english/: 01-openai-alternative.md  02-langchain-integration.md  03-free-llm-api.md
marketing/qiita/: 01-openai-api-alternative.md  02-langchain-teai.md  03-free-llm-nemotron.md
marketing/zenn/: 01-teai-architecture.md  02-teai-vs-openrouter.md
memory/: MEMORY.md
nanobot-cli/: Cargo.toml
nanobot-cli/src/: main.rs
scripts/: build-wasm.sh  connect-tailscale.sh  deploy-dev.sh  generate-filler-audio.js  optimize-lambda.sh  setup-tailscale.sh
src/: identity.rs  main.rs  modes.rs
src/cli/: mod.rs
src/commands/: mod.rs
src/ui/: prompt.rs
tasks/: blog-2026-02-24-board-meeting.md  launch-campaign.md  lessons.md  todo.md
tests/: test_capabilities.sh  test_landing_page.sh  test_sync_api.sh
web/: 404.html  admin.html  api-docs.html  comparison.html  contact.html  conversations.html  docs.html  enai-metadata.json  eval-report.html  features.html  index.html  install.sh  keys.html  manifest.json  media.html  pi.html  playground.html  pricing.html  privacy.html  prompt-comparison.html  settings.html  skill.html  skills.html  status.html  sw.js  teai-about.html  teai-api-reference.html  teai-blog.html  teai-changelog.html  teai-dashboard.html  teai-docs.html  teai-index-simple.html  teai-index.html  teai-pricing.html  teai-register.html  teai-security.html  teai-sla.html  teai-status.html  teai-terms.html  terms.html  (+2 more)
(+18 files in other folders)
