[workspace]
members = ["crates/nanobot-core", "crates/nanobot-lambda"]
resolver = "2"

[package]
name = "nanobot"
version = "0.1.0"
edition = "2021"
description = "A lightweight AI agent framework"
license = "MIT"

[[bin]]
name = "nanobot"
path = "src/main.rs"

[features]
default = []
http-api = ["nanobot-core/http-api"]
dynamodb-backend = ["nanobot-core/dynamodb-backend"]
stripe = ["nanobot-core/stripe"]
lambda = ["nanobot-core/lambda"]
saas = ["nanobot-core/saas"]

[dependencies]
nanobot-core = { path = "crates/nanobot-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
