[workspace]
members = ["crates/nanobot-core", "crates/nanobot-lambda"]
resolver = "2"

[package]
name = "nanobot"
version = "0.1.0"
edition = "2021"
description = "A lightweight AI agent framework"
license = "MIT"

[[bin]]
name = "chatweb"
path = "src/main.rs"

[features]
default = []
http-api = ["nanobot-core/http-api"]
dynamodb-backend = ["nanobot-core/dynamodb-backend"]
stripe = ["nanobot-core/stripe"]
lambda = ["nanobot-core/lambda"]
saas = ["nanobot-core/saas"]
local-fallback = ["nanobot-core/local-fallback"]

[dependencies]
nanobot-core = { path = "crates/nanobot-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
