[workspace]
members = ["crates/nanobot-core", "crates/nanobot-lambda"]
resolver = "2"

[package]
name = "nanobot"
version = "0.2.0"
edition = "2021"
description = "A lightweight AI agent framework"
license = "MIT"

[[bin]]
name = "chatweb"
path = "src/main.rs"

[features]
default = []
http-api = ["nanobot-core/http-api"]
dynamodb-backend = ["nanobot-core/dynamodb-backend"]
stripe = ["nanobot-core/stripe"]
lambda = ["nanobot-core/lambda"]
saas = ["nanobot-core/saas"]
local-fallback = ["nanobot-core/local-fallback"]

[dependencies]
nanobot-core = { path = "crates/nanobot-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
crossterm = "0.28"
indicatif = "0.17"

# Production build optimized for AWS Graviton3 (ARM64 / Neoverse V1)
# - Full LTO for maximum optimization
# - Single codegen unit for best inlining
# - Strip symbols for smaller binary
# - Abort on panic for faster unwinding
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Graviton3-specific optimizations set via RUSTFLAGS in deploy-fast.sh:
# -C target-cpu=neoverse-v1 (enables Graviton3 instructions)

# Fast release build for development deploys (~40% faster, 95% performance)
# Use: ./infra/deploy-fast.sh --fast
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
