[package]
name = "nanobot-cli"
version = "2.0.3"
edition = "2021"

[dependencies]
rustyline = "9.1.2"
colored = "2.0.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }