[package]
name = "chatweb-app"
version = "0.1.0"
edition = "2021"
description = "Leptos WASM frontend for chatweb.ai"
license = "MIT"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Window",
    "Storage",
    "Location",
    "KeyboardEvent",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = "0.3"
serde-wasm-bindgen = "0.6"
