[package]
name = "chatweb-frontend"
version = "0.1.0"
edition = "2021"
description = "WASM entry point for chatweb.ai frontend"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
chatweb-app = { path = "../chatweb-app" }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
