[package]
name = "nanobot-core"
version = "0.1.0"
edition = "2021"
description = "Core library for nanobot AI agent framework"
license = "MIT"

[features]
default = ["file-backend"]
file-backend = []
http-api = ["axum", "tower", "tower-http", "hmac", "sha2", "hex"]
dynamodb-backend = ["aws-config", "aws-sdk-dynamodb", "aws-sdk-polly", "aws-sdk-connect", "aws-sdk-s3", "aws-sdk-route53"]
stripe = ["async-stripe"]
lambda = ["lambda_http"]
saas = ["dynamodb-backend", "stripe", "lambda", "http-api"]
local-fallback = ["candle-core", "candle-transformers", "candle-nn", "tokenizers", "hf-hub"]

[dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
regex = "1"
dirs = "6"
cron = "0.15"

# URL encoding
urlencoding = "2"

# Random number generation
rand = "0.8"

# Async trait support
async-trait = "0.1"

# Lazy initialization
once_cell = "1"

# Command detection
which = "7"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# HTTP API (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit", "set-header"], optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = "0.22"
hex = { version = "0.4", optional = true }

# AWS (optional)
aws-config = { version = "1", optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
aws-sdk-polly = { version = "1", optional = true }
aws-sdk-connect = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-route53 = { version = "1", optional = true }

# Directory traversal
walkdir = "2"

# Stripe (optional)
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper-rustls"], optional = true }

# Lambda (optional)
lambda_http = { version = "0.13", optional = true }

# Async stream for SSE
async-stream = "0.3"

# Local LLM fallback (optional)
candle-core = { version = "0.8", optional = true, default-features = false }
candle-nn = { version = "0.8", optional = true, default-features = false }
candle-transformers = { version = "0.8", optional = true, default-features = false }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.3", optional = true, default-features = false, features = ["tokio", "online"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
